Refactor FileAdapter for better naming and order